--- a/media.css
+++ b/media.css
@@ -1,41 +1,99 @@
-@charset "utf-8";
+@media screen and (max-width:750px){
+    .div4{
+        margin-left: 90px;
+    }
 
-@media screen and (max-width:981px){
+    .p1,.p2{
+        text-indent: 90px;
+    }
     
-    .section2{
-        margin-top: 30px;
+    body>header{
+        height: 120px;
     }
 
-    .section2>figure>img{
-     width: 100%;
+    
+
+    .menu {
+        height: 20%;
+        width: 100%;
+        flex-flow: row wrap;
+        margin-right: 30px;
     }
 
-    .imagem2{
-        width: 101.5%;
+    header>h1{
+        width: 100%;
+        padding-top: 10px;
+        margin: auto;
+        text-align: center;
+    }
+
+    #oi1{
+        padding-top: 40px;
+    }
+
+}
+
+@media screen and (max-width:675px){
+
+    .div4{
+        margin-left: 60px;
+    }
+    
+    .p1,.p2{
+        text-indent: 60px;
+    }
+
+    #oi{
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width:654px){
+
+    .div4{
+        margin-left: 40px;
+    }
+    
+    .p1,.p2{
+        text-indent: 40px;
+    }
+
+    main>h2,#oi{
+        font-size: 18px;
+    }
+}
+
+
+@media screen and (max-width:632px){
+
+    .div4{
         margin-left: 20px;
     }
-
-    .div1{
-        margin-top: 80px;
+    
+    .p1,.p2{
+        text-indent: 20px;
     }
 
-    .div2>span{
-        margin-left: 80px;
-        padding-top: 33px;
+    main>h2,#oi{
+        font-size: 18px;
+    }
+}
+
+
+@media screen and (max-width:607px){
+
+    .div4{
+        margin-left: 30px;
+    }
+    
+    .p1,.p2{
+        overflow-wrap: break-word;
+        text-indent:  30px;
     }
 
-    .titulo1{
-       font-size: 30px;
-    }
-
-    .titulo2{
-           font-size: 20px;
-    }
-
-    .container{
-        height: 530px;
+    main>h2,#oi{
+        font-size: 18px;
     }
 
     
 }
-
