--- a/style.css
+++ b/style.css
@@ -3,12 +3,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,600;1,600&family=Heebo:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,800;1,800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:wght@700;900&family=Teko:wght@600&display=swap');
 
 
-:root {
-    --marrom: rgb(31, 21, 23);
-    --marrom_claro: #462f19ea;
-    --outro_marrom: rgb(164, 90, 73);
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -18,7 +12,7 @@
 
 
 body>header {
-    background-color: rgb(58, 39, 3);
+    background-color: rgb(63, 46, 14);
     width: 100vw;
     display: flex;
     flex-flow: row wrap;
@@ -42,6 +36,7 @@ header>h1 {
     height: 100%;
     width: 40%;
     flex-flow: row wrap;
+    margin-right: 30px;
 }
 
 .navegar {
@@ -49,6 +44,7 @@ header>h1 {
     width: 100%;
     display: flex;
     flex-flow: row wrap;
+    text-align: center;
 }
 
 .navegar>a {
@@ -68,84 +64,53 @@ header>h1 {
 .navegar>a:hover {
     background-color: rgb(97, 68, 15);
     transition-duration: .7s;
-    color: black;
+    color: white;
 }
 
 main {
-    background-color: rgb(75, 54, 17);
-}
-
-.container {
-    height: 88vh;
-    display: flex;
-    flex-flow: row wrap;
     width: 100%;
+    padding-top: 150px;
 }
 
-.div1 {
-    width: 47%;
-    display: flex;
-    justify-content: center;
-    margin-top: 5%;
-}
-
-.section1>h2 {
+main>h2 {
     text-align: center;
-    color: white;
+    padding-bottom: 30px;
+    font-size: 21px;
     font-weight: bolder;
 }
 
-.section1>hr {
-    margin-top: 3%;
-    width: 70%;
-    margin-left: 15%;
+#oi{
+   padding-top: 60px;
 }
 
-.titulo1 {
-    margin-top: 30%;
-    font-size: 35px;
-}
-
-.titulo2 {
-    margin-top: 3%;
-    font-size: 20px;
-}
-
-.div2 {
-    width: 50%;
-    display: flex;
-    flex-flow: column wrap;
-}
-
-.div2>span {
-    font-size: 25px;
-    font-weight: bolder;
+main>figure {
     text-align: center;
-    color: red;
-    margin-top: 18%;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
-.imagem1 {
-    width: 91%;
-    margin-left: 4%;
+main>figure>img {
+    width: 60%;
 }
 
-.imagem2 {
-    width: 100%;
-    height: 102%;
+main>p {
+    padding-top: 40px;
+    padding-bottom: 50px;
+    font-size: 17.4px;
+    text-align: justify;
+    text-indent: 20px;
+    line-height: 27px;
+    padding-left: 22px;
+    padding-right: 22px;
 }
 
-.section2 {
-    display: flex;
-    margin-top: 3%;
-}
-
-.div3 {
-    display: flex;
-    flex-flow: column wrap;
-    gap: 12px;
-}
-
+.linha-personalizada {
+    border: 0; 
+    height: 1.5px; 
+    background-color: #333; 
+    width: 90%; 
+    margin: 20px auto; 
+  }
 
 footer {
     height: 220px;
@@ -159,7 +124,7 @@ footer {
     font-size: 16px;
 }
 
-.p2{
+.p2 {
     text-indent: 150px;
     font-size: 16px;
     padding-top: 40px;
